// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSpinner.vue can be green 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-green" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be grey-lighter 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-grey-lighter" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be ice 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-ice" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be large 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--large" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be medium 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--medium" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be night-light 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-night-light" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be regular 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--regular" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be small 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--small" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be spartan_blue 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-spartan_blue" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be white 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--color-white" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue can be xl 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner spinner--xl" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;

exports[`SSpinner.vue renders correctly 1`] = `
<svg role="status" viewBox="0 0 32 32" class="spinner" progress="50">
  <path d="M16 2 a 14 14 0 0 0 0 28 a 14 14 0 0 0 0 -28"></path>
</svg>
`;
